# OHLCService

./: .gitignore  CMakeLists.txt  README.md  ohlc.grpc.pb.cc  ohlc.grpc.pb.h
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/abseil/src/abseil-stamp/: abseil-gitinfo.txt  abseil-update-info.txt
cmake/abseil/tmp/: abseil-cfgcmd.txt  abseil-gitclone.cmake  abseil-gitupdate.cmake  abseil-mkdirs.cmake
include/: ohlcdatabase.hpp  ohlcservice.hpp  util.hpp
include/kafka/: kafka.hpp
include/rpc/: ohlcserver.hpp
protobufs/: ohlc.grpc.pb.cc  ohlc.grpc.pb.h  ohlc.pb.cc  ohlc.pb.h  ohlc.proto
src/: client.cpp  main.cpp  ohlc_consumer.cpp  ohlc_producer.cpp  ohlcdatabase.cpp  ohlcservice.cpp  server.cpp  util.cpp
src/kafka/: kafka.cpp
src/rpc/: ohlcserver.cpp
